--- a/MainApp_Avalonia/MainWindow.axaml
+++ b/MainApp_Avalonia/MainWindow.axaml
@@ -2,25 +2,61 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mainAppAvalonia="clr-namespace:MainApp_Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="MainApp_Avalonia.MainWindow"
+        x:DataType="mainAppAvalonia:MainWindow"
+        Background="DarkSlateGray"
         Title="MainApp_Avalonia">
-        <Grid>
-                <!-- Define two columns: one for the button, one for the list -->
-                <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/> <!-- Auto-sized for the button -->
-                        <ColumnDefinition Width="*"/>   <!-- Takes the remaining space for the list -->
-                </Grid.ColumnDefinitions>
+    
+    <Grid Margin="20">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            
+        </Grid.ColumnDefinitions>
 
-                <!-- The button in the first column -->
-                <Button Content="Hello World" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Click="OnClick"/>
-                <Button Content="Hello World 2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Click="OnClick"/>
+        <!-- Button in the first column -->
+        <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <!-- First Button -->
+            <Button Content="Contact list" Click="OnShowList" Margin="0,0,0,10" FontWeight="Bold" FontFamily=""/>
+            <!-- Second Button -->
+            <Button Content="Add Contact" Click="OnShowForm" FontWeight="Bold"/>
+        </StackPanel>
 
-                <!-- The list in the second column -->
-                <ListBox Grid.Column="1" Margin="10,0,0,0">
-                        <ListBoxItem>Item 1</ListBoxItem>
-                        <ListBoxItem>Item 2</ListBoxItem>
-                        <ListBoxItem>Item 3</ListBoxItem>
-                </ListBox>
-        </Grid>
+        <!-- ListBox in the second column -->
+        <ListBox x:Name="Contacts" Grid.Column="1" Margin="10,0,0,0" ItemsSource="{Binding Items}" Background="#152323" CornerRadius="10">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        
+        <!-- ContactForm in the second column --> 
+        <StackPanel x:Name="ContactForm" Grid.Column="1" IsVisible="False" Margin="25,0,0,20">
+            <Label Content="Insert name: "/>
+            <TextBox x:Name="NameInput" Margin="0,5,0,5" Padding="5"/>
+            
+            <Label Content="Insert last name: "/>
+            <TextBox x:Name="LastNameInput" Margin="0,5,0,5" Padding="5"/>
+            
+            <Label Content="Insert email : "/>
+            <TextBox x:Name="EmailInput" Margin="0,5,0,5" Padding="5"/>
+            
+            <Label Content="Insert phone number: "/>
+            <TextBox x:Name="PhoneInput" Margin="0,5,0,5" Padding="5"/>
+            
+            <Label Content="Insert street address: "/>
+            <TextBox x:Name="StreetAddressInput" Margin="0,5,0,5" Padding="5"/>
+            
+            <Label Content="Insert postal code: "/>
+            <TextBox x:Name="PostalCodeInput" Margin="0,5,0,5" Padding="5"/>
+            
+            <Label Content="Insert city: "/>
+            <TextBox x:Name="CityInput" Margin="0,5,0,5" Padding="5"/>
+            
+            <Button Name="Add" Content="Add" Padding="10 5" Click="OnAdd_Click" Margin="0 20 50 10" FontWeight="Bold"/>
+        </StackPanel>
+    </Grid>
 </Window>
