--- a/MainApp_Avalonia/MainWindow.axaml
+++ b/MainApp_Avalonia/MainWindow.axaml
@@ -13,7 +13,6 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
-            
         </Grid.ColumnDefinitions>
 
         <!-- Button in the first column -->
@@ -25,10 +24,33 @@
         </StackPanel>
 
         <!-- ListBox in the second column -->
-        <ListBox x:Name="Contacts" Grid.Column="1" Margin="10,0,0,0" ItemsSource="{Binding Items}" Background="#152323" CornerRadius="10">
+        <ListBox x:Name="Contacts" 
+                 Grid.Column="1" 
+                 Margin="10,0,0,0" 
+                 ItemsSource="{Binding Items}" 
+                 SelectionChanged="OnContactSelected" 
+                 Background="#152323" 
+                 CornerRadius="10">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding}" />
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{Binding DisplayName}"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Left"
+                                   Margin="5"
+                                   Grid.Column="0"/>
+                        <Button x:Name="Edit" 
+                                Content="Edit" 
+                                Padding="10 5" 
+                                Click="OnEdit_Click" 
+                                Margin="5" 
+                                FontWeight="Bold"
+                                Grid.Column="1"/>
+                    </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
@@ -56,7 +78,11 @@
             <Label Content="Insert city: "/>
             <TextBox x:Name="CityInput" Margin="0,5,0,5" Padding="5"/>
             
-            <Button Name="Add" Content="Add" Padding="10 5" Click="OnAdd_Click" Margin="0 20 50 10" FontWeight="Bold"/>
+            <Button x:Name="Add" Content="Add" Padding="10 5" Click="OnAdd_Click" Margin="0 20 50 10" FontWeight="Bold"/>
+
+            <Button x:Name="Save" Content="Save Changes" Padding="10 5" Click="OnSave_Click" Margin="0 20 50 10" FontWeight="Bold"/>
+
+            <Button x:Name="Cancel" Content="Cancel" Padding="10 5" Click="OnCancel_Click" Margin="0 20 50 10" FontWeight="Bold"/>
         </StackPanel>
     </Grid>
 </Window>
