--- a/MainApp_Avalonia/ContactFormControl.axaml
+++ b/MainApp_Avalonia/ContactFormControl.axaml
@@ -26,8 +26,27 @@
         <Label Content="Insert city: "/>
         <TextBox x:Name="CityInput" Margin="0,5,0,5" Padding="5"/>
         
-        <Button x:Name="Save" Content="Save Changes" Padding="10 5" Click="OnUpsertClick" Margin="0 20 50 10" FontWeight="Bold"/>
-        
-        <Button x:Name="Cancel" Content="Cancel" Padding="10 5" Click="OnCancelClick" Margin="0 20 50 10" FontWeight="Bold"/>
+        <Grid Margin="0 20 0 10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" /> 
+                <ColumnDefinition Width="Auto" /> 
+            </Grid.ColumnDefinitions>
+            
+            <Button x:Name="Save" 
+                    Content="Save" 
+                    Padding="10 5" 
+                    Click="OnUpsertClick" 
+                    FontWeight="Bold"
+                    Grid.Column="0"
+                    HorizontalAlignment="Left"/>
+            
+            <Button x:Name="Cancel" 
+                    Content="Cancel" 
+                    Padding="10 5" 
+                    Click="OnCancelClick" 
+                    FontWeight="Bold"
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"/>
+        </Grid>
     </StackPanel>
 </UserControl>
