--- a/MainApp_Avalonia/ContactListControl.axaml
+++ b/MainApp_Avalonia/ContactListControl.axaml
@@ -7,7 +7,7 @@
              xmlns:viewModels="clr-namespace:MainApp_Avalonia.ViewModels"
              x:Class="MainApp_Avalonia.ContactListControl">
     <ListBox x:Name="Contacts"
-             Margin="10,0,0,0"
+             Margin="20,10,10,10"
              Background="#152323"
              ItemsSource="{Binding Contacts}"
              x:DataType="viewModels:ContactListViewModel"
@@ -16,6 +16,8 @@
             <DataTemplate DataType="model:Contact">
                 <Grid>
                     <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
@@ -50,24 +52,24 @@
                                Margin="5"
                                Grid.Column="0"
                                Grid.Row="3"/>
-                    <!-- <Button x:Name="Edit" -->
-                    <!--         Content="Edit" -->
-                    <!--         Padding="10 5" -->
-                    <!--         Click="OnEditClick" -->
-                    <!--         CommandParameter="{Binding}" -->
-                    <!--         Margin="5" -->
-                    <!--         FontWeight="Bold" -->
-                    <!--         Grid.Column="1" -->
-                    <!--         Grid.Row="4"/> -->
+                     <Button x:Name="Edit" 
+                             Content="Edit" 
+                             Padding="10 5" 
+                             Click="OnEditClick" 
+                             CommandParameter="{Binding}" 
+                             Margin="5 10 5 5"
+                             FontWeight="Bold" 
+                             Grid.Column="0"
+                             Grid.Row="4"/>
                     <Button x:Name="Delete"
                             Content="Delete"
                             Padding="10 5"
                             Click="OnDeleteClick"
                             CommandParameter="{Binding}"
-                            Margin="5"
+                            Margin="5 10 5 5"
                             FontWeight="Bold"
-                            Grid.Column="2"
-                            Grid.Row="5"/>
+                            Grid.Column="1"
+                            Grid.Row="4"/>
                 </Grid>
             </DataTemplate>
         </ListBox.ItemTemplate>
